Fix issues with handlebars resolution